fix: constraints, recording mode usage in isPersonVisible

--- a/assets/css/tailwind.css
+++ b/assets/css/tailwind.css
@@ -140,7 +140,7 @@ h2 {
     font-weight: 400;
     margin: 0;
     padding: 0;
-    font-size: 1.2rem;
+    font-size: 2.5rem;
 }
 
 h3 {
